--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-scroll": "^1.8.1",
     "styled-components": "^5.2.0",
     "styled-icons": "^10.22.0",
     "typescript": "^4.0.3",
